# user-management-py

./: .gitignore  .pylintrc  Makefile  README.md  main.py  pyproject.toml
.github/: labels.yml
.github/workflows/: sync-labels.yml  test_code.yml  test_lint.yml
tests/: __init__.py  http_requests.py  test_endpoints_home.py  test_health.py  test_routes_users.py
user_management_py/: __init__.py  create_app.py
user_management_py/core/: config.ini  config_parser.py  setting.py
user_management_py/crud/: User.py  pipelines.py  user.py
user_management_py/db/: connection.py  model.py
user_management_py/enum/: pipeline.py
user_management_py/models/: pipelines.py  users.py
user_management_py/routes/: api.py
user_management_py/routes/endpoints/: auth.py  home.py  pipelines.py  users.py
user_management_py/schemas/: auth.py  general.py  pipelines.py  users.py
user_management_py/utils/: __init__.py  auth.py  field_validator.py  id.py  jwt_bearer.py
