[tool.poetry]
name = "user-management-py"
version = "0.1.0"
description = "A boilerplate for fastapi python project supported by poetry."
authors = ["Arash Madadi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
httpx = "^0.27.2"
sqlmodel = "^0.0.22"
passlib = "^1.7.4"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pylint = "^3.3.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"